# text2digits

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  t2d.py
.github/workflows/: ci.yml  lint.yml  publish.yml
tests/: test_edge_cases.py  test_features.py  test_number_conversion.py  test_regression.py  test_rules.py  test_text_processing_helpers.py  test_tokens.py
text2digits/: __init__.py  rules.py  text2digits.py  text_processing_helpers.py  tokens_basic.py  tokens_rules.py
